# demosaur

./: 2025-11-23-this-session-is-being-continued-from-a-previous-co.txt  QWEN.md  README.md  code_intern_server.py  demosaur.py  main.py  pyproject.toml  requirements.txt  trash_test.py
.qwen/: PROJECT_SUMMARY.md  settings.json
docs/: ANALYSIS.md  API_DESIGN.md  ARCHITECTURE.md  ASYNC_ORCHESTRATION_DESIGN.md  CACHE_RESEARCH.md  CONTEXT_CACHE_DESIGN_SUMMARY.md  CONTEXT_MANAGEMENT_APPROACH.md  CONTEXT_MANAGEMENT_STRUCTURE_PLAN.md  DEADCODE_DETECTION_PLAN.md  DEADCODE_IMPLEMENTATION.md  DSPY_FINDINGS.md  DSPY_HISTORY_INTEGRATION.md  DSPY_INTEGRATION.md  FASTAPI.md  FASTMCP.md  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST_DETAILED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MCP_IMPROVEMENTS.md  MEM0_DSPY_INTEGRATION_RESEARCH.md  MEM0_DSPY_PASSING_FAILING_CRITERIA.md  MEM0_DSPY_TESTING_CRITERIA.md  MODULE_STRUCTURE.md  PATTERN_LIBRARY_ANALYSIS.md  PHASE3_ENHANCEMENTS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  WORKFLOW.md
example/: ANOMALY_ROOT_CAUSE_ANALYSIS.md  ARCHITECTURAL_IDIOSYNCRASIES_AUDIT.md  BUGS_1.md  BUGS_3.md  CHANGES_SUMMARY.md  COMPARISON_REPORT.md  CONVERSATION_2_ANALYSIS.md  CONVERSATION_BATCH_ANALYSIS.md  CONVERSATION_HISTORY_ANALYSIS.md  CORRECTION_PLAN.md  DSPY_TUTORIALS_SUMMARY.md  FINAL_SUMMARY_FOR_USER.md  IMPLEMENTATION_CHECKLIST_DETAILED.md  INTEGRATION_GAPS_AND_FLOW.md  INTENT_AND_STAGES_PLAN.md  ISSUE_NAME_VEHICLE_CONFUSION.md  ISSUE_RETROACTIVE_TIMEOUT.md  PHASE_1_ANALYSIS_AND_PHASE_2_INTEGRATION.md  (+39 more)
(+187 files in other folders)
