[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "dspy-ai>=3.0.4",
    "fastapi>=0.121.2",
    "fastmcp>=2.13.1",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.3",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "uvloop>=0.22.1",
    "websockets>=15.0.1",
]
